--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
   <script>document.documentElement.className += ' js';</script>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
+
 <body>
   <div class="grid-container">
     <nav class="menu" data-menu="suave">
@@ -58,7 +60,7 @@
             por um focinho comprido e uma cauda longa e peluda.</p>
           <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
         </section>
-        
+
         <section data-anime="show-right">
           <h2>Esquilo</h2>
           <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
@@ -109,7 +111,30 @@
         </section>
       </div>
     </section>
-
+    <section class="grid-section pag" data-anime="scroll">
+      <ul class="custom-pag">
+        <li><img src="img/slide/foto1-thumb.jpg"></li>
+        <li><img src="img/slide/foto2-thumb.jpg"></li>
+        <li><img src="img/slide/foto3-thumb.jpg"></li>
+        <li><img src="img/slide/foto4-thumb.jpg"></li>
+        <li><img src="img/slide/foto5-thumb.jpg"></li>
+        <li><img src="img/slide/foto6-thumb.jpg"></li>
+      </ul>
+      <div class="wrapper">
+        <ul class="slide">
+          <li><img src="img/slide/foto1.jpg" alt=""></li>
+          <li><img src="img/slide/foto2.jpg" alt=""></li>
+          <li><img src="img/slide/foto3.jpg" alt=""></li>
+          <li><img src="img/slide/foto4.jpg" alt=""></li>
+          <li><img src="img/slide/foto5.jpg" alt=""></li>
+          <li><img src="img/slide/foto6.jpg" alt=""></li>
+        </ul>
+        <div class="arrow-nav">
+          <button class="prev"></button>
+          <button class="next"></button>
+        </div>
+      </div>
+    </section>
     <section class="grid-section faq" data-anime="scroll" id="faq">
       <h1 class="titulo">FAQ</h1>
       <dl class="faq-lista" data-anime="accordion">
@@ -162,6 +187,7 @@
       </form>
     </div>
   </section>
-  <script src="main.js"></script>  
+  <script src="main.js"></script>
 </body>
+
 </html>
