--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@
       <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
       <ul data-menu="list" id="menu">
         <li><a href="#animais">Animais</a></li>
-        <li data-dropdown>
-          <a href="sobre.html">Sobre</a>
-          <ul class="dropdown-menu">
-            <li><a href="empresa.html">A Empresa</a></li>
-            <li><a href="equipe.html">Equipe</a></li>
-            <li><a href="socios.html">Sócios</a></li>
-            <li><a href="investidores.html">Investidores</a></li>
-          </ul>
-        </li>
-        <li><a href="#faq">Faq</a></li>
+        <li><a href="#faq">Perguntas</a></li>
         <li><a href="#contato">Contato</a></li>
         <li><a data-modal="abrir" href="login.html">Login →</a></li>
       </ul>
@@ -63,51 +54,29 @@
 
         <section data-anime="show-right">
           <h2>Esquilo</h2>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
-            por um focinho comprido e uma cauda longa e peluda.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
-            qual a raposa vermelha é a mais comum.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
-            qual a raposa vermelha é a mais comum.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>Os esquilos pertencem a uma grande família de mamíferos roedores, de pequeno e médio porte, conhecida como Sciuridae. </p>
+          <p>As sementes são as principais fontes de alimentação, mas também consomem insetos e frutas. Quando coletam alimento, enterram algumas sementes que encontram, sendo que algumas chegam a germinar, como pinhões e coquinhos, acabando por plantar árvores como araucária e jerivá.</p>
+          <p>Durante a gestação, os pais preparam o ninho para receber os filhotes. Constroem ninhos com folhas e galhos, em ramos muito altos, em árvores como a cajarana, para abrigarem as suas crias da chuva e do vento.</p>
         </section>
         <section data-anime="show-down">
           <h2>Urso</h2>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
-            por um focinho comprido e uma cauda longa e peluda.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
-            qual a raposa vermelha é a mais comum.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>Os Ursos (latim científico: Ursidae) constituem uma família de mamíferos carnívoros de grande porte, contendo os ursos e os pandas. Eles são classificados como caníformes ou carnivoros caninos. Os ursos são encontrados nos continentes da América do Norte, América do Sul, Europa e Ásia. </p>
+          <p> As características comuns dos ursos modernos incluem corpos grandes com pernas atarracadas, focinhos longos, orelhas pequenas e arredondadas, cabelos desgrenhados, patas plantígradas com cinco garras não retráteis e caudas curtas.</p>
+          <p>Enquanto o urso polar é principalmente carnívoro (tanto predador quanto carniceiro), e o panda gigante se alimenta quase inteiramente de bambu , as seis espécies restantes são onívoras com dietas variadas, incluindo aves, reptéis, anfíbios, mariposas, larvas, frutas, frutas silvestres, legumes, mel, peixes, carniça, invertebrados, pequenos roedores, focas e grandes animais como cavalos, vacas, porcos, bodes, antílopes e cervos como os alces e renas, além de restos de alimentos que são encontrados em piqueniques ou em lixos, como fazem os gatos, guaxinins, cães de rua e cães ferais.</p>
         </section>
         <section data-anime="show-down">
           <h2>Lobo</h2>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
-            por um focinho comprido e uma cauda longa e peluda.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
-            qual a raposa vermelha é a mais comum.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>Lobo é um animal carnívoro da família dos canídeos e que pertence ao gênero Canis. São três espécies que recebem tal designação: o lobo-cinzento (Canis lupus), lobo-etíope (Canis simensis) e o lobo-dourado-africano (Canis lupaster). O lobo-oriental (Canis lycaon) e o lobo-vermelho (Canis rufus), possuem classificações discutíveis se espécies em si, subespécies do lobo-cinzento, ou híbridos de lobo com coiote (coylobo).</p>
+          <p>Existem outros animais comumente referidos como "lobos" mas pertencem a outros gêneros ou outras classificações de mamíferos: lobo-da-terra (uma hiena), Lobo-terrível (um Canídeo extinto distinto), Mabeco (em alguns locais chamado lobo pintado), lobo-da-tasmânia (um marsupial), lobo-marinho (um pinípede), lobo-guará (um canídeo pouco aparentado). Também sem relação, outras espécies que, às vezes, são chamadas de "lobo" são: cão-selvagem-asiático (em certos locais chamado lobo-da-montanha), hiena-malhada (lobo-tigre), chacal-dourado (lobo-da-cana), coiote (lobo do mato) Enguia lobo (um peixe), peixe lobo (outro peixe), Boca de lobo (uma peça de esgoto) e o graxaim-do-mato (chamado variavelmente de lobinho, lobete ou só de lobo)</p>
         </section>
         <section data-anime="show-right">
           <h2>Macaco</h2>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
-            por um focinho comprido e uma cauda longa e peluda.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
-            qual a raposa vermelha é a mais comum.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>Os macacos variam em tamanho desde o sagui-pigmeu, que pode ser tão pequeno e pouco mais de 100 g em peso, para o mandril macho, quase 1 m (3 pés 3 pol) de comprimento e pesando até 36 kg (79 lb). Alguns são arbóreos (vivendo em árvores), enquanto outros vivem na savana; as dietas diferem entre as várias espécies, mas podem conter qualquer um dos seguintes alimentos: frutas, folhas, sementes, nozes, flores, ovos e pequenos animais (incluindo insetos e aranhas).</p>
         </section>
         <section data-anime="show-right">
           <h2>Leão</h2>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
-            por um focinho comprido e uma cauda longa e peluda.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
-          <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
-            qual a raposa vermelha é a mais comum.</p>
-          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>O leão [feminino: leoa] (nome científico: Panthera leo) é uma espécie de mamífero carnívoro do gênero Panthera e da família Felidae. A espécie é atualmente encontrada na África subsaariana e na Ásia, com uma única população remanescente em perigo, no Parque Nacional da Floresta de Gir, Gujarat, Índia. Foi extinto na África do Norte e no Sudoeste Asiático em tempos históricos, e até o Pleistoceno Superior, há cerca de 10 000 anos, era o mais difundido grande mamífero terrestre depois dos humanos, sendo encontrado na maior parte da África, em muito da Eurásia, da Europa Ocidental à Índia, e na América, do Yukon ao México. É um dos quatro grandes felinos, com alguns machos excedendo 250 quilogramas em peso, sendo o segundo maior felino recente depois do tigre.</p>
+          <p>A pelagem é unicolor de coloração castanha, e os machos apresentam uma juba característica. Uma das características mais marcantes da espécie é a presença de um tufo de pelos pretos na cauda, que também possui uma espora. Habita preferencialmente as savanas e pastagens abertas, mas pode ser encontrado em regiões mais arbustivas. </p>
         </section>
       </div>
     </section>
@@ -136,16 +105,52 @@
       </div>
     </section>
     <section class="grid-section faq" data-anime="scroll" id="faq">
-      <h1 class="titulo">FAQ</h1>
+      <h1 class="titulo">Perguntas</h1>
       <dl class="faq-lista" data-anime="accordion">
-        <dt>Qual a idade dos animais?</dt>
-        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
-        <dt>Eles são fantásticos?</dt>
-        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
-        <dt>Qual a diferença?</dt>
-        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
-        <dt>Como proteger?</dt>
-        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+        <dt>
+          Onde esses animais vivem?
+        </dt>
+        <dd>
+          <li><b>Urso:</b> florestas, montanhas e regiões frias</li>
+
+          <li><b>Macaco:</b> florestas tropicais e savanas</li>
+
+          <li><b>Lobo:</b> florestas, tundras e campos abertos</li>
+
+          <li><b>Leão:</b> savanas africanas</li>
+
+          <li><b>Esquilo:</b> florestas e áreas urbanas arborizadas</li>
+
+          <li><b>Raposa:</b> florestas, campos e até cidades</li>
+        </dd>
+        <dt>O que esses animais comem?</dt>
+        <dd>
+          <li><b>Urso:</b> onívoro (frutas, mel, peixes e pequenos animais)</li>
+
+          <li><b>Macaco:</b> frutas, folhas, sementes e insetos</li>
+
+          <li><b>Lobo:</b> carnívoro (caça em grupo)</li>
+
+          <li><b>Leão:</b>carnívoro (grandes presas)</li>
+
+          <li><b>Esquilo:</b> sementes, nozes e frutas</li>
+
+          <li><b>Raposa:</b> onívora (pequenos animais, frutas e restos de alimento)</li>
+        </dd>
+        <dt>Como eles se comportam?</dt>
+        <dd>
+          <li><b>Urso:</b> geralmente solitário</li>
+
+          <li><b>Macaco:</b> vive em grupos sociais</li>
+
+          <li><b>Lobo:</b> vive em matilhas organizadas</li>
+
+          <li><b>Leão:</b>vive em bandos chamados de alcateias</li>
+
+          <li><b>Esquilo:</b> ativo e ágil, passa muito tempo coletando alimento</li>
+
+          <li><b>Raposa:</b> animal esperto, ágil e adaptável</li>
+        </dd>
       </dl>
     </section>
 
@@ -161,9 +166,7 @@
         <img src="img/mapa.png">
       </div>
       <ul class="dados">
-        <li>contato@origamid.com</li>
-        <li>+55 (21) 9999-9999</li>
-        <li>Rua do Conde, nº 21</li>
+        <li>+55 (99) 9999-9999</li>
         <li>Rio de Janeiro - RJ</li>
         <li>Doe <span class="btc-preco">0</span> bitcoin para nos ajudar</li>
         <li data-semana="1,2,3,4,5" data-horario="8,18">Seg à Sex das 8 às 18</li>
